tests/baselines/reference/parserParameterList9.errors.txt
==== tests/cases/compiler/parserParameterList9.ts (1 errors) ====
    class C {
       foo(...bar?) { }
           ~~~~~~~
!!! parserParameterList9.ts(2,8): error TS1047: A rest parameter cannot be optional.
    }